# music-agent

./: .gitignore  .pre-commit-hooks.yaml  main.py  pyproject.toml
magent/: container.py  logger.py  settings.py
magent/adapters/repository/: lastfm.py  reccobeats.py  spotify.py
magent/adapters/trace/: langfuse.py  opik.py
magent/adapters/workflow/langgraph/: graph.py  nodes.py  prompts.py  states.py  tools.py
magent/adapters/workflow/pydantic/: __init__.py  agent.py  graph.py  prompts.py
magent/app/: api_server.py
magent/app/api/: entrypoints.py
magent/domain/: meta.py  repository.py
magent/infra/: container.py  settings.py  spotify.py
magent/service/graph/: container.py  graph.py  nodes.py  settings.py  tools.py  workflow.py
magent/service/trace/: tracer.py
magent/service/usecases/: container.py  settings.py
magent/service/usecases/recommend/: container.py  dto.py  recommend.py
manifests/langfuse/: values.yaml
