[project]
name = "magent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.48.2",
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.7",
    "mcp>=1.15.0",
    "pydantic>=2.11.9",
    "pydantic-ai>=1.0.10",
    "pydantic-graph>=1.0.10",
    "pydantic-settings>=2.11.0",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
]

[ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 100
indent-width = 4
target-version = "py313"

[ruff.lint]
select = ["E", "F", "N", "I", "W", "UP", "C901"]
ignore = []
fixable = ["E", "F", "N", "I", "W", "UP"]
unfixable = []
per-file-ignores = {}
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
